attempt to fix stretching image bug on mobile

--- a/docs/css/imagecards.css
+++ b/docs/css/imagecards.css
@@ -63,5 +63,6 @@
     .card img
     {
         max-height: none;
+        height: fit-content;
     }
 }
